--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,18 @@
-*.iml
 .gradle
-/local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
-.DS_Store
-/build
-/captures
-.externalNativeBuild
+.idea/
+gradle/
+*.gradle
+FirstAndroidAppClient2.iml
+*.properties
+gradlew.bat
+gradlew
+
+app/app.iml
+app/build/
+app/sampledata/
+app/build.gradle
+app/proguards-rules.pro
+
+app/src/androidTest/
+app/src/test/
+NotesClient.iml
