activity_signup.xml done

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,10 @@
         </activity>
 
         <activity android:name=".ActivitySignIn"/>
+
+        <activity android:name=".ActivitySignUp"/>
+
+
     </application>
 
 </manifest>
