--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example">
@@ -9,25 +10,25 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/notes"
+        android:roundIcon="@drawable/ic_notes"
         android:supportsRtl="true"
-        tools:ignore="GoogleAppIndexingWarning"
-        android:theme="@style/MyTheme">
+        android:theme="@style/MyTheme"
+        tools:ignore="GoogleAppIndexingWarning">
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/title_activity_main"></activity>
         <activity
             android:name=".ActivitySplash"
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".ActivitySignIn"/>
-
-        <activity android:name=".ActivitySignUp"/>
-
-        <activity android:name=".ActivityMain"/>
-
+        <activity android:name=".ActivitySignIn" />
+        <activity android:name=".ActivitySignUp" />
+        <activity android:name=".ActivityMain" />
     </application>
 
 </manifest>
