Twice .gitignore file has been added.

--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,1 +1,19 @@
-/build
+.gradle
+.idea/
+gradle/
+*.gradle
+FirstAndroidAppClient2.iml
+*.properties
+gradlew.bat
+gradlew
+
+app/app.iml
+app/build/
+app/sampledata/
+app/build.gradle
+app/proguards-rules.pro
+
+app/src/androidTest/
+app/src/test/
+NotesClient.iml
+*.properties
